kubernetes/applications/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx
  namespace: test
spec:
  selector:
    app.kubernetes.io/name: test-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
